Enhance framework components with detailed documentation and improved functionality
- Updated MemoryDriver class with comprehensive PHPDoc comments, added methods for cache management (put, forget, flush).
- Refined DriverException and Factory classes to correct package annotations.
- Enhanced Container class documentation for clarity.
- Introduced a new Driver interface for email handling with detailed method descriptions.
- Added CompositionException and DriverException classes for email handling with clear usage scenarios.
- Expanded Factory class for email drivers with detailed configuration and error handling documentation.
- Improved Helpers class with proper namespace usage.
- Enhanced Response class with comprehensive documentation and additional methods for JSON handling and response management.
- Finalized validation rules (EmailRule, MinRule, RequiredRule) as final classes for better encapsulation.
- Enhanced view engine classes (AdvancedEngine, BasicEngine, LiteralEngine, PhpEngine) with detailed documentation and improved functionality.
- Updated View and Manager classes to provide better structure and documentation for rendering and macro handling.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,9 +4,7 @@
         "**/.svn": true,
         "**/.hg": true,
         "**/.DS_Store": true,
-        "**/Thumbs.db": true,
-        "**/.github": true,
-        "**/.vscode": true
+        "**/Thumbs.db": true
     },
     "explorerExclude.backup": {}
 }
