fix: Correct namespace spelling for League\Flysystem in Driver classes and update package name in composer.json

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "isdv/php-mvc",
+    "name": "isdg/php-mvc",
     "description": "A simple PHP MVC framework.",
     "type": "library",
     "license": "MIT",
