fix: Correct namespace casing in composer.json and update return types in Application and AdvancedEngine classes

--- a/composer.json
+++ b/composer.json
@@ -6,30 +6,30 @@
     "version": "1.0.1",
     "autoload": {
         "psr-4": {
-            "PhpMvc\\": "src/",
-            "PhpMvc\\Cache\\": "src/Cache/",
-            "PhpMvc\\Cache\\Driver\\": "src/Cache/Driver/",
-            "PhpMvc\\Cache\\Exception\\": "src/Cache/Exception/",
-            "PhpMvc\\Database\\": "src/Database/",
-            "PhpMvc\\Email\\": "src/Email/",
-            "PhpMvc\\FileSystem\\": "src/FileSystem/",
-            "PhpMvc\\Http\\": "src/Http/",
-            "PhpMvc\\Logging\\": "src/Logging/",
-            "PhpMvc\\Logging\\Driver\\": "src/Logging/Driver/",
-            "PhpMvc\\Logging\\Exception\\": "src/Logging/Exception/",
-            "PhpMvc\\Provider\\": "src/Provider/",
-            "PhpMvc\\Queue\\": "src/Queue/",
-            "PhpMvc\\Routing\\": "src/Routing/",
-            "PhpMvc\\Routing\\Exception\\": "src/Routing/Exception/",
-            "PhpMvc\\Session\\": "src/Session/",
-            "PhpMvc\\Session\\Driver\\": "src/Session/Driver/",
-            "PhpMvc\\Session\\Exception\\": "src/Session/Exception/",
-            "PhpMvc\\Support\\": "src/Support/",
-            "PhpMvc\\Validation\\": "src/Validation/",
-            "PhpMvc\\Validation\\Exception\\": "src/Validation/Exception/",
-            "PhpMvc\\Validation\\Rule\\": "src/Validation/Rule/",
-            "PhpMvc\\View\\": "src/View/",
-            "PhpMvc\\View\\Engine\\": "src/View/Engine/"
+            "PhpMVC\\": "src/",
+            "PhpMVC\\Cache\\": "src/Cache/",
+            "PhpMVC\\Cache\\Driver\\": "src/Cache/Driver/",
+            "PhpMVC\\Cache\\Exception\\": "src/Cache/Exception/",
+            "PhpMVC\\Database\\": "src/Database/",
+            "PhpMVC\\Email\\": "src/Email/",
+            "PhpMVC\\FileSystem\\": "src/FileSystem/",
+            "PhpMVC\\Http\\": "src/Http/",
+            "PhpMVC\\Logging\\": "src/Logging/",
+            "PhpMVC\\Logging\\Driver\\": "src/Logging/Driver/",
+            "PhpMVC\\Logging\\Exception\\": "src/Logging/Exception/",
+            "PhpMVC\\Provider\\": "src/Provider/",
+            "PhpMVC\\Queue\\": "src/Queue/",
+            "PhpMVC\\Routing\\": "src/Routing/",
+            "PhpMVC\\Routing\\Exception\\": "src/Routing/Exception/",
+            "PhpMVC\\Session\\": "src/Session/",
+            "PhpMVC\\Session\\Driver\\": "src/Session/Driver/",
+            "PhpMVC\\Session\\Exception\\": "src/Session/Exception/",
+            "PhpMVC\\Support\\": "src/Support/",
+            "PhpMVC\\Validation\\": "src/Validation/",
+            "PhpMVC\\Validation\\Exception\\": "src/Validation/Exception/",
+            "PhpMVC\\Validation\\Rule\\": "src/Validation/Rule/",
+            "PhpMVC\\View\\": "src/View/",
+            "PhpMVC\\View\\Engine\\": "src/View/Engine/"
         },
         "files": [
             "src/Helpers.php"
