--- a/composer.json
+++ b/composer.json
@@ -42,6 +42,7 @@
         }
     ],
     "require": {
+        "vlucas/phpdotenv": "^5.4",
         "league/flysystem": "^2.0",
         "opis/closure": "^3.6",
         "monolog/monolog": "^2.2",
