--- a/composer.json
+++ b/composer.json
@@ -43,6 +43,7 @@
     ],
     "require": {
         "vlucas/phpdotenv": "^5.4",
+        "filp/whoops": "^2.14",
         "league/flysystem": "^2.0",
         "opis/closure": "^3.6",
         "monolog/monolog": "^2.2",
