--- a/.github/workflows/auto-patch.yml
+++ b/.github/workflows/auto-patch.yml
@@ -20,4 +20,4 @@ jobs:
 
       - name: Create Pull Request
         run: |
-          gh pr create --base main --head development --title "[PATCH] Merging branches" --body "" --label "Patch"
+          gh pr create --base main --head development --label "Patch"
