--- a/.github/workflows/auto-patch.yml
+++ b/.github/workflows/auto-patch.yml
@@ -20,6 +20,6 @@ jobs:
 
       - name: Create Pull Request
         run: |
-          TITLE="$(git log --format=%s origin/main..HEAD | head -nl)"
+          TITLE="$(git log --format=%s origin/main..HEAD | head -n1)"
           BODY="$(git log --format=%B origin/main..HEAD)"
           gh pr create --base main --head development --title "$TITLE" --boby "$BODY" --label "Patch"
